--- a/static/css/habits.css
+++ b/static/css/habits.css
@@ -55,7 +55,8 @@
 }
 
 .month-labels {
-  display: flex;
+  position: relative;
+  height: 1rem;
   font-size: 0.7rem;
   color: var(--secondary);
   margin-bottom: 0.25rem;
@@ -63,8 +64,8 @@
 }
 
 .month-label {
-  flex: 1;
-  text-align: left;
+  position: absolute;
+  white-space: nowrap;
 }
 
 .graph-body {
